src/sketches/planets/src/index.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  overflow: hidden;
  width: 100vw;
  height: 100vh;
  padding: 0;
  margin: 0;
}

.octo-arm {
  transform-origin: 130px 106px;
}

.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}

.github-corner svg {
  position: absolute;
  top: 0;
  right: 0;
  border: 0;
  color: #fff;
  fill: #151513;
}

body .tp-dfwv {
  z-index: 100;
  top: auto;
  bottom: 8px;
  width: auto;
  min-width: 256px;
}

canvas {
  width: 100%;
  height: 100%;
}

